# Classy

./: README.md  install.py  pyproject.toml  requirements.txt  setup.py  setup.py.bak
classy/: Memory.py  Memory.py.bak  __init__.py  __init__.py.bak  autoencoder.py  base.py  bio.py  datasets.py  image.py  multilayer_perceptron.py  multilayer_perceptron.py.bak  preprocess.py  requirements.txt  sound.py  sound.py.bak  supervised.py  supervised_jax.py  supervised_keras.py  supervised_numpynet.py  text.py  unsupervised.py  unsupervised.py.bak  utils.py
classy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: fish.csv  iris.xls
debug/: 2020-11-07 NumpyNet Classy Examples.ipynb  2020-11-07 NumpyNet Classy Examples.py  2020-11-07 NumpyNet Image Classification CNN.ipynb  2020-11-07 NumpyNet Image Classification CNN.py  2020-11-07 NumpyNet Image Classification-Copy1.py  2020-11-09 - Debug NumpyNet MNIST.ipynb  2020-11-09 - Debug NumpyNet MNIST.py  2020-11-10 - Debug NumpyNet MNIST.ipynb  2020-11-10 - Debug NumpyNet MNIST.py  2020-11-11 - NumpyNet Split Issue.ipynb  2020-11-11 - NumpyNet Split Issue.py  2022-12-04 - Image Classification.ipynb  2022-12-04 - Image Classification.py  2023-11-28 - Debug Save and Load.ipynb  2023-11-28 - Debug Save and Load.py  Debug NumpyNet MNIST.ipynb  Debug NumpyNet MNIST.py  Example Digits Backprop.py  Example Image Classification.py  Non-Linear.ipynb  Non-Linear.py  test_save_CSC.json  test_save_RCE.json  test_save_kNearestNeighbor.json  test_save_naivebayes.json  test_save_naivebayes_images.json  test_save_nn.json  (+1 more)
examples/: NumPyNet  (+32 more)
(+68 files in other folders)
