[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classy"
version = "0.0.67"
description = "A simple wrapper around classification algorithms."
authors = [{ name = "Brian Blais", email = "bblais@bryant.edu" }]
dependencies = [
    "numpy=1.26.4",
    "scipy",
    "Pillow",
    "flax",
    "jax",
]

[tool.setuptools]
packages = ["classy"]  # Replace with your package's module name